[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/ExitDoor.gd" type="Script" id=1]
[ext_resource path="res://Levels/top_layer_teleport.png" type="Texture" id=2]
[ext_resource path="res://Levels/teleporterp1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Closing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TeleporterTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Opening"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TeleporterTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TeleporterTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="ExitDoor" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="TeleporterBottom" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
hframes = 2
vframes = 3

[node name="TeleporterTop" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
hframes = 2
vframes = 3
frame = 3

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Closing = SubResource( 3 )
anims/Opening = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="PlayerNear" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNear"]
position = Vector2( 16, 16 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_ExitDoor_body_entered"]
[connection signal="body_entered" from="PlayerNear" to="." method="_on_PlayerNear_body_entered"]
[connection signal="body_exited" from="PlayerNear" to="." method="_on_PlayerNear_body_exited"]
